--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         let isCropping = false;
         let objectToCrop;
 
-        const API_URL = 'http://localhost:5001/api/remove-background';
+        const API_URL = '/api/remove-background';
 
         function debounce(func, wait) {
             let timeout;
@@ -840,4 +840,5 @@
     </script>
 </body>
 </html>
+
 
