--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         let isCropping = false;
         let objectToCrop;
 
-        const API_URL = '/api/remove-background';
+        const API_URL = 'https://image-quality-enhacer.onrender.com';
 
         function debounce(func, wait) {
             let timeout;
@@ -840,5 +840,6 @@
     </script>
 </body>
 </html>
+
 
 
